Archive2/b4/c874d401de5486/output
main.cpp:6:23: error: no template named 'numeric_limist' in namespace 'std'; did you mean 'numeric_limits'?
    std::cout << std::numeric_limist<int>::max() << std::endl;
                 ~~~~~^~~~~~~~~~~~~~
                      numeric_limits
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/limits:304:12: note: 'numeric_limits' declared here
    struct numeric_limits : public __numeric_limits_base
           ^
1 error generated.
